# SmartLife-Agent

./: .gitignore  LICENSE  README.md  start_smartlife.sh
backend/: .gitignore  README.md  add_calendar_event_id.py  add_plan_column.py  add_todo_due_date.py  authenticate_google.py  main.py  pyproject.toml  requirements.txt  server_config.json  start_backend.sh  stop_backend.sh  test_clean_response.py  test_mcp_connection.py  test_mcp_setup.py  verify_oauth.py
backend/app/: auth.py  calendar_helper.py  database.py  db_models.py  google_oauth.py  models.py
backend/app/agent/: gemini_client.py  mcp_agent.py
backend/app/mcp_servers/: gemini_search.py  gmail_mcp_server.py  google_calendar_server.py
backend/app/routers/: auth.py  chat.py  projects.py  settings.py
backend/mcp_servers/: google_calendar_server.py  project_plan_server.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: Chat.tsx  Home.tsx  Login.tsx  OAuthCallback.tsx  Settings.tsx  Signup.tsx
frontend/src/services/: api.ts
